# mlops-10-ETL-pipline-networking

./: .gitignore  README.md  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_push_data.py
asset/: notes_1.txt  references.md
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/exception/: exception.py
